--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -8,6 +8,24 @@
         crossorigin="anonymous">
 </head>
 <body>
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+  <!-- Brand -->
+  <a class="navbar-brand" href="#">Student Management System</a>
+
+  <!-- Toggler/collapsibe Button -->
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <!-- Navbar links -->
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" th:href="@{/students}">Student Management</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 <div class = "container">
   <div class="row">
     <h1>List Students</h1>
@@ -33,6 +51,10 @@
         <td th:utext="${student.firstName}"></td>
         <td th:utext="${student.lastName}"></td>
         <td th:utext="${student.email}"></td>
+        <td>
+          <a th:href="@{/students/edit/{id}(id=${student.id})}" class="btn btn-primary">Update</a>
+          <a th:href="@{/students/{id}(id=${student.id})}" class="btn btn-danger">Delete</a>
+        </td>
       </tr>
     </tbody>
 
